# panpe

./: .gitignore  Dockerfile  LICENSE.txt  README.md  inference.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
configs/: panpe-2layers-xrr.yaml
notebooks/: inference.ipynb
panpe/: __init__.py  package_info.py  paths.py  runs.py  train.py  utils.py
panpe/config_utils/: __init__.py  config.py  init_from_config.py
panpe/data_utils/: __init__.py  exp_dataset.py
panpe/inference/: __init__.py  inference.py  inference_processing.py  measured_data.py
panpe/likelihood_refinement/: __init__.py
panpe/likelihood_refinement/importance_sampling/: __init__.py  snis.py  streaming_snis.py
panpe/likelihood_refinement/mcmc/: __init__.py  autocorr.py  torchemcee.py
panpe/nns/: __init__.py  scalers.py  utils.py
panpe/nns/embedding_nn/: __init__.py  conv_encoder.py  embedding_net.py  resnets.py
panpe/nns/flows/: __init__.py  flow_wrapper.py  rq_nsf_flow.py
panpe/simulator/: __init__.py  distributions.py  hyperpriors.py  measurement_noise_simulator.py  physical_models.py  priors.py  q_simulator.py  simulator.py
panpe/simulator/reflectivity/: __init__.py  abeles.py  kinematical.py  memory_eff.py  numpy_implementations.py  refl_utils.py  smearing.py
panpe/training/: __init__.py  callbacks.py  loggers.py  schedulers.py  trainer.py  utils.py
panpe/visualization/: __init__.py  palettes.py  plot_data.py  plot_sampled_profiles.py
tests/functional/: conftest.py  test_inference.py
