[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panpe"
dynamic = ["version"]
description = "Prior-Amortized Neural Posterior Estimation for Bayesian Reflectometry Analysis"
authors = [
    {name = "Vladimir Starostin", email = "vladimir.starostin@uni-tuebingen.de"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.3",
    "torch>=2.1.0",
    "nflows>=0.14",
    "tqdm",
    "PyYAML",
    "click",
    "pytest",
    "matplotlib",
    "h5py",
]

[project.scripts]
panpe_train = "panpe:train"

[tool.hatch.version]
path = "panpe/package_info.py"
pattern = "__version__ = \"(?P<version>[^\"]+)\""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "--doctest-modules --doctest-ignore-import-errors panpe tests/functional"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"

[tool.hatch.build.targets.wheel]
packages = ["panpe"]
include = [
    "configs/*",
]